--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -18,7 +18,7 @@ header{
         margin: 0px; 
         }
     .fotoPortada{
-        background-image: url(../img/entrenamientoKettlebells.JPG);
+        background-image: url(../img/entrenamientoKettlebells.jpg);
         height: 450px;
         background-attachment: fixed;
         background-position: center;
