reestructuracion de secciones del index

--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,6 +1,6 @@
 $color-cajas: #735d331b;
 $fondo-color-footer: #434343;
-$fondo-nuevoPost: #434343;
+$fondo-nuevoPost: #735d331b;
 $color-boton: orange;
 
 @mixin boton ($colorboton){
