--- a/css/estilo.css
+++ b/css/estilo.css
@@ -177,78 +177,6 @@ main .cajaIntroduccion {
     main .cajaIntroduccion .divCalltoaction .calltoactionSmall {
       font-size: medium; }
 
-main .sectionNuevoPost {
-  margin: 20px;
-  border-radius: 8px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 5fr 1fr;
-  grid-template-areas: "titulo titulo" "imagen texto" "imagen cta";
-  background-color: #434343; }
-  main .sectionNuevoPost .Subtitulo {
-    grid-area: titulo;
-    height: 50px; }
-    main .sectionNuevoPost .Subtitulo h4 {
-      text-align: start;
-      color: white; }
-  main .sectionNuevoPost .cajaImagenPosteo {
-    grid-area: imagen;
-    padding: 10px; }
-    main .sectionNuevoPost .cajaImagenPosteo .fotoPosteos {
-      border-radius: 8px;
-      width: 99%;
-      height: 99%; }
-  main .sectionNuevoPost .cajaTextoPosteo {
-    grid-area: texto;
-    color: white; }
-    main .sectionNuevoPost .cajaTextoPosteo h5 {
-      color: white;
-      text-align: center;
-      padding: 8px;
-      font-size: 1.3rem;
-      font-weight: bolder; }
-  main .sectionNuevoPost .divCalltoaction {
-    grid-area: cta;
-    display: flex;
-    justify-content: center;
-    border-radius: 5px;
-    align-items: flex-end;
-    flex-direction: row;
-    text-decoration: none; }
-    main .sectionNuevoPost .divCalltoaction .calltoaction {
-      background-color: orange;
-      text-decoration: underline orange;
-      border-radius: 30px;
-      padding: 20px;
-      margin-bottom: 10px; }
-      main .sectionNuevoPost .divCalltoaction .calltoaction:hover {
-        transform: scale(1.1, 1.1);
-        text-decoration-color: orange; }
-    main .sectionNuevoPost .divCalltoaction .calltoactionSmall {
-      font-size: medium; }
-
-main .sectionReviews {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  margin: 20px;
-  border-radius: 8px;
-  border: #735d331b 5px groove; }
-  main .sectionReviews .Subtitulo {
-    background-color: #735d331b; }
-    main .sectionReviews .Subtitulo h4 {
-      text-align: start;
-      color: black; }
-  main .sectionReviews .cajaReviews {
-    display: flex;
-    justify-content: space-around; }
-    main .sectionReviews .cajaReviews .review {
-      display: flex;
-      flex-direction: column;
-      align-items: center; }
-      main .sectionReviews .cajaReviews .review p {
-        text-align: center; }
-
 main .sectionProximosCursos {
   display: flex;
   justify-content: center;
@@ -288,6 +216,78 @@ main .sectionProximosCursos {
           font-size: medium; }
         main .sectionProximosCursos .cajaProximosCursos .proximoCurso .divCalltoaction .botonProximosCursos {
           margin: 20px; }
+
+main .sectionReviews {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 20px;
+  border-radius: 8px;
+  border: #735d331b 5px groove;
+  color: #fecc01;
+  background-color: #434343; }
+  main .sectionReviews .Subtitulo h4 {
+    text-align: start;
+    color: #fecc01; }
+  main .sectionReviews .cajaReviews {
+    display: flex;
+    justify-content: space-around; }
+    main .sectionReviews .cajaReviews .review {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      main .sectionReviews .cajaReviews .review p {
+        text-align: center; }
+
+main .sectionNuevoPost {
+  margin: 20px;
+  border-radius: 8px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 5fr 1fr;
+  grid-template-areas: "titulo titulo" "imagen texto" "imagen cta";
+  background-color: #735d331b; }
+  main .sectionNuevoPost .Subtitulo {
+    grid-area: titulo;
+    height: 50px; }
+    main .sectionNuevoPost .Subtitulo h4 {
+      text-align: start;
+      color: black; }
+  main .sectionNuevoPost .cajaImagenPosteo {
+    grid-area: imagen;
+    padding: 10px; }
+    main .sectionNuevoPost .cajaImagenPosteo .fotoPosteos {
+      border-radius: 8px;
+      width: 99%;
+      height: 99%; }
+  main .sectionNuevoPost .cajaTextoPosteo {
+    grid-area: texto;
+    color: black; }
+    main .sectionNuevoPost .cajaTextoPosteo h5 {
+      color: black;
+      text-align: center;
+      padding: 8px;
+      font-size: 1.3rem;
+      font-weight: bolder; }
+  main .sectionNuevoPost .divCalltoaction {
+    grid-area: cta;
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
+    align-items: flex-end;
+    flex-direction: row;
+    text-decoration: none; }
+    main .sectionNuevoPost .divCalltoaction .calltoaction {
+      background-color: orange;
+      text-decoration: underline orange;
+      border-radius: 30px;
+      padding: 20px;
+      margin-bottom: 10px; }
+      main .sectionNuevoPost .divCalltoaction .calltoaction:hover {
+        transform: scale(1.1, 1.1);
+        text-decoration-color: orange; }
+    main .sectionNuevoPost .divCalltoaction .calltoactionSmall {
+      font-size: medium; }
 
 header .fotoPortadaAbout {
   background-image: url(../img/naturalflowmcTeam.jpg);
