--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -120,88 +120,6 @@ main{
             }
         }                    
     }
-    .sectionNuevoPost{
-        margin: 20px;     
-        border-radius: 8px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 5fr 1fr;
-        grid-template-areas: 
-        "titulo titulo"
-        "imagen texto"
-        "imagen cta";
-        background-color: $fondo-nuevoPost; 
-        .Subtitulo{
-            grid-area: titulo;
-            height: 50px; 
-            h4{
-                text-align: start;    
-                color: white;
-            }  
-        }
-        .cajaImagenPosteo{
-            grid-area: imagen;
-            padding: 10px;
-            .fotoPosteos{
-                border-radius: 8px;                   
-                width: 99%;
-                height: 99%;                           
-            }          
-        }
-        .cajaTextoPosteo{
-            grid-area: texto;
-            color: white; 
-            h5{
-                color: white; 
-                text-align: center; 
-                padding: 8px; 
-                font-size: 1.3rem; 
-                font-weight: bolder;
-            }           
-        } 
-        .divCalltoaction{
-            grid-area: cta;
-            display: flex;
-            justify-content: center;
-            border-radius: 5px;
-            align-items: flex-end;
-            flex-direction: row;
-            text-decoration: none;
-            .calltoaction{
-                @include boton ($color-boton)
-            } 
-            .calltoactionSmall{
-                font-size: medium;
-            }           
-        }
-    }
-    .sectionReviews{
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        margin: 20px;
-        border-radius: 8px;  
-        border:  $color-cajas 5px groove;
-        .Subtitulo{
-            background-color:  $color-cajas;
-            h4{
-                text-align: start;    
-                color:black;
-            }
-        }
-        .cajaReviews{
-            display: flex;
-            justify-content: space-around;
-            .review{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                p{
-                    text-align: center;
-                }
-            }
-        }
-    }
     .sectionProximosCursos{
         display: flex;
         justify-content: center;
@@ -245,5 +163,87 @@ main{
                 
         }
     }
-    
+    .sectionReviews{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        margin: 20px;
+        border-radius: 8px;  
+        border:  $color-cajas 5px groove;        
+        color: #fecc01;
+        background-color: $fondo-color-footer;
+        .Subtitulo{            
+            h4{
+                text-align: start;  
+                color:  #fecc01;              
+            }
+        }
+        .cajaReviews{
+            display: flex;
+            justify-content: space-around;            
+            .review{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                p{
+                    text-align: center;
+                }
+            }
+        }
+    }    
+    .sectionNuevoPost{
+        margin: 20px;     
+        border-radius: 8px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 5fr 1fr;
+        grid-template-areas: 
+        "titulo titulo"
+        "imagen texto"
+        "imagen cta";
+        background-color: $fondo-nuevoPost; 
+        .Subtitulo{
+            grid-area: titulo;
+            height: 50px; 
+            h4{
+                text-align: start;    
+                color: black;
+            }  
+        }
+        .cajaImagenPosteo{
+            grid-area: imagen;
+            padding: 10px;
+            .fotoPosteos{
+                border-radius: 8px;                   
+                width: 99%;
+                height: 99%;                           
+            }          
+        }
+        .cajaTextoPosteo{
+            grid-area: texto;
+            color: black; 
+            h5{
+                color: black; 
+                text-align: center; 
+                padding: 8px; 
+                font-size: 1.3rem; 
+                font-weight: bolder;
+            }           
+        } 
+        .divCalltoaction{
+            grid-area: cta;
+            display: flex;
+            justify-content: center;
+            border-radius: 5px;
+            align-items: flex-end;
+            flex-direction: row;
+            text-decoration: none;
+            .calltoaction{
+                @include boton ($color-boton)
+            } 
+            .calltoactionSmall{
+                font-size: medium;
+            }           
+        }
+    }
 }
