--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -71,7 +71,7 @@ header{
                 align-items: flex-end;
                 flex-direction: row;
                 h2{
-                    font-size: 2.5rem;   
+                    font-size: 3rem;   
                     color: white;  
                     font-weight: bold;
                 }
@@ -171,16 +171,18 @@ main{
         border-radius: 8px;  
         border:  $color-cajas 5px groove;        
         color: #fecc01;
-        background-color: $fondo-color-footer;
+        background-color: $color-cajas;        
         .Subtitulo{            
             h4{
                 text-align: start;  
-                color:  #fecc01;              
+                color:  black;                
+                             
             }
         }
         .cajaReviews{
             display: flex;
-            justify-content: space-around;            
+            justify-content: space-around;
+            background-color: $fondo-color-footer;            
             .review{
                 display: flex;
                 flex-direction: column;
