--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,7 +9,7 @@ body {
     font-family: "SofiaSans-Regular";
     color: #090303;
     text-align: center;
-    padding: 20px; }
+    padding: 15px; }
   body p {
     font-size: 1.5rem;
     margin-top: 0px;
@@ -140,7 +140,7 @@ header .fotoPortada {
         background-color: orange;
         text-decoration: underline orange;
         border-radius: 30px;
-        padding: 20px;
+        padding: 16px;
         margin-bottom: 10px; }
         header .fotoPortada .header2 .divCalltoaction .calltoaction:hover {
           transform: scale(1.1, 1.1);
@@ -169,7 +169,7 @@ main .cajaIntroduccion {
       background-color: orange;
       text-decoration: underline orange;
       border-radius: 30px;
-      padding: 20px;
+      padding: 16px;
       margin-bottom: 10px; }
       main .cajaIntroduccion .divCalltoaction .calltoaction:hover {
         transform: scale(1.1, 1.1);
@@ -207,7 +207,7 @@ main .sectionProximosCursos {
           background-color: orange;
           text-decoration: underline orange;
           border-radius: 30px;
-          padding: 20px;
+          padding: 16px;
           margin-bottom: 10px; }
           main .sectionProximosCursos .cajaProximosCursos .proximoCurso .divCalltoaction .calltoaction:hover {
             transform: scale(1.1, 1.1);
@@ -223,7 +223,7 @@ main .sectionReviews {
   flex-direction: column;
   margin: 20px;
   border-radius: 8px;
-  border: #735d331b 5px groove;
+  border: #434343 5px solid;
   color: #fecc01;
   background-color: #735d331b; }
   main .sectionReviews .Subtitulo h4 {
@@ -247,23 +247,29 @@ main .sectionNuevoPost {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 5fr 1fr;
   grid-template-areas: "titulo titulo" "imagen texto" "imagen cta";
-  background-color: #735d331b; }
+  border: #735d331b 5px groove;
+  background-color: #735d331b;
+  justify-content: start; }
   main .sectionNuevoPost .Subtitulo {
     grid-area: titulo;
-    height: 50px; }
+    background-color: #735d331b;
+    display: flex; }
     main .sectionNuevoPost .Subtitulo h4 {
       text-align: start;
       color: black; }
   main .sectionNuevoPost .cajaImagenPosteo {
     grid-area: imagen;
-    padding: 10px; }
+    padding: 10px;
+    display: flex; }
     main .sectionNuevoPost .cajaImagenPosteo .fotoPosteos {
       border-radius: 8px;
       width: 99%;
       height: 99%; }
   main .sectionNuevoPost .cajaTextoPosteo {
     grid-area: texto;
-    color: black; }
+    color: black;
+    display: flex;
+    flex-direction: column; }
     main .sectionNuevoPost .cajaTextoPosteo h5 {
       color: black;
       text-align: center;
@@ -282,7 +288,7 @@ main .sectionNuevoPost {
       background-color: orange;
       text-decoration: underline orange;
       border-radius: 30px;
-      padding: 20px;
+      padding: 16px;
       margin-bottom: 10px; }
       main .sectionNuevoPost .divCalltoaction .calltoaction:hover {
         transform: scale(1.1, 1.1);
@@ -363,7 +369,7 @@ main .mainAbout {
       background-color: orange;
       text-decoration: underline orange;
       border-radius: 30px;
-      padding: 20px;
+      padding: 16px;
       margin-bottom: 10px; }
       main .mainAbout .divCalltoaction .calltoaction:hover {
         transform: scale(1.1, 1.1);
@@ -421,21 +427,33 @@ main h1 {
   background-color: #735d331b; }
 
 main .cajaBlog {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 3fr 0.20fr;
-  grid-template-areas: "imagen titulo" "texto texto" "cta cta";
+  display: flex;
+  flex-direction: column;
   margin: 20px;
-  background-color: #735d331b; }
-  main .cajaBlog .cajaImagenBlog {
-    grid-area: imagen; }
-    main .cajaBlog .cajaImagenBlog .fotoPosteos {
-      width: 100%;
-      border-radius: 8px; }
-  main .cajaBlog .cajaTituloYtextoBlog {
-    grid-area: titulo; }
-  main .cajaBlog .cajaTextoBlog {
-    grid-area: texto; }
+  border: #735d331b 5px groove;
+  background-color: #735d331b;
+  margin-bottom: 40px;
+  margin-top: 30px;
+  border-radius: 8px; }
+  main .cajaBlog .divImagenYtituloBlog {
+    display: flex; }
+    main .cajaBlog .divImagenYtituloBlog .cajaImagenBlog {
+      width: 40%;
+      padding: 10px; }
+      main .cajaBlog .divImagenYtituloBlog .cajaImagenBlog .fotoPosteos {
+        width: 100%;
+        height: 450px;
+        border-radius: 8px; }
+    main .cajaBlog .divImagenYtituloBlog .cajaTituloYtextoBlog {
+      width: 60%;
+      padding: 10px; }
+      main .cajaBlog .divImagenYtituloBlog .cajaTituloYtextoBlog h4 {
+        text-align: left;
+        background-color: #735d331b;
+        border-radius: 8px; }
+  main .cajaBlog .cajaTextoBlog h5 {
+    text-align: left;
+    font-size: 1.8rem; }
   main .cajaBlog .divCalltoaction {
     grid-area: cta;
     display: flex;
@@ -448,7 +466,7 @@ main .cajaBlog {
       background-color: orange;
       text-decoration: underline orange;
       border-radius: 30px;
-      padding: 20px;
+      padding: 16px;
       margin-bottom: 10px; }
       main .cajaBlog .divCalltoaction .calltoaction:hover {
         transform: scale(1.1, 1.1);
@@ -518,7 +536,7 @@ main .cajaCurso {
       background-color: orange;
       text-decoration: underline orange;
       border-radius: 30px;
-      padding: 20px;
+      padding: 16px;
       margin-bottom: 10px; }
       main .cajaCurso .reservarCurso .divCalltoaction .calltoaction:hover {
         transform: scale(1.1, 1.1);
@@ -592,7 +610,7 @@ main .cajaCurso {
       background-color: orange;
       text-decoration: underline orange;
       border-radius: 30px;
-      padding: 20px;
+      padding: 16px;
       margin-bottom: 10px; }
       main .cajaCurso .reservarCurso .divCalltoaction .calltoaction:hover {
         transform: scale(1.1, 1.1);
@@ -666,7 +684,7 @@ main .cajaCurso {
       background-color: orange;
       text-decoration: underline orange;
       border-radius: 30px;
-      padding: 20px;
+      padding: 16px;
       margin-bottom: 10px; }
       main .cajaCurso .reservarCurso .divCalltoaction .calltoaction:hover {
         transform: scale(1.1, 1.1);
@@ -676,11 +694,18 @@ main .cajaCurso {
     margin: 20px  auto;
     padding: 0px; }
 
+main .cajaContacto .container .fondoContacto {
+  background-color: #735d331b;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  border-radius: 8px; }
+
 main .cajaContacto .container .letraPisaBootstrap {
   font-family: "SofiaSans-Regular";
   color: #090303;
   text-align: center;
-  padding: 20px; }
+  padding: 20px;
+  font-size: 1.2rem; }
   main .cajaContacto .container .letraPisaBootstrap .input:focus {
     transform: scale(1.1, 1.1);
     border: #f9f6f6 1px solid; }
@@ -688,7 +713,7 @@ main .cajaContacto .container .letraPisaBootstrap {
     background-color: orange;
     text-decoration: underline orange;
     border-radius: 30px;
-    padding: 20px;
+    padding: 16px;
     margin-bottom: 10px; }
     main .cajaContacto .container .letraPisaBootstrap .calltoaction:hover {
       transform: scale(1.1, 1.1);
@@ -709,7 +734,7 @@ main .cajaContacto .container .letraPisaBootstrap {
   main .sectionNuevoPost {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 4fr 3fr 1fr;
+    grid-template-rows: 0.2fr 0.5fr 0.5fr 0.2fr;
     grid-template-areas: "titulo" "imagen" "texto" "cta"; }
     main .sectionNuevoPost .Subtitulo {
       grid-area: titulo;
@@ -735,26 +760,23 @@ main .cajaContacto .container .letraPisaBootstrap {
     flex-direction: column; }
     main .sectionProximosCursos .cajaProximosCursos .proximoCurso {
       align-self: center; }
-  main .cajaBlog {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 3fr 0.20fr;
-    grid-template-areas: "imagen" "titulo" "texto" "cta"; }
-    main .cajaBlog .cajaImagenBlog {
-      grid-area: imagen;
-      display: flex; }
-      main .cajaBlog .cajaImagenBlog .fotoPosteos {
+  main .cajaBlog .divImagenYtituloBlog {
+    flex-direction: column; }
+    main .cajaBlog .divImagenYtituloBlog .cajaImagenBlog {
+      width: 100%; }
+      main .cajaBlog .divImagenYtituloBlog .cajaImagenBlog .fotoPosteos {
         margin: auto;
-        height: 400px;
-        display: inline-block; }
-    main .cajaBlog .cajaTituloYtextoBlog {
-      grid-area: titulo; }
-    main .cajaBlog .cajaTextoBlog {
-      grid-area: texto; }
-    main .cajaBlog .divCalltoaction {
-      grid-area: cta; }
-  main .container .mapa {
-    margin: auto;
-    padding: 50px; } }
+        width: 100%; }
+    main .cajaBlog .divImagenYtituloBlog .cajaTituloYtextoBlog {
+      display: flex;
+      flex-direction: column;
+      width: 100%; }
+  main .cajaContacto .container .mapa {
+    display: flex;
+    flex-direction: column;
+    margin: 0px auto;
+    justify-content: center;
+    overflow: hidden; } }
 
 @media screen and (max-width: 480px) {
   header .fotoPortada {
@@ -765,7 +787,11 @@ main .cajaContacto .container .letraPisaBootstrap {
     header .fotoPortada .header2 .divCalltoaction .calltoaction {
       text-decoration-color: orange;
       font-size: medium;
-      text-decoration: underline orange; }
+      text-decoration: underline orange;
+      padding-left: 50px;
+      padding-right: 50px;
+      padding-top: 10px;
+      padding-bottom: 10px; }
   header .fotoPortadaAbout {
     height: 250px;
     background-attachment: local; }
@@ -791,23 +817,62 @@ main .cajaContacto .container .letraPisaBootstrap {
     background-attachment: local; }
     header .fotoPortadaNutricion .header2 .divSlogan h2 {
       font-size: 1.8rem; }
-  main .cajaBlog {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start; }
-    main .cajaBlog .cajaImagenBlog .fotoPosteos {
-      margin: 5px auto;
-      width: 100%; }
+  main .cajaIntroduccion .divCalltoaction .calltoaction {
+    text-decoration-color: orange;
+    font-size: medium;
+    text-decoration: underline orange;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px; }
+  main .mainAbout .divCalltoaction .calltoaction {
+    text-decoration-color: orange;
+    font-size: medium;
+    text-decoration: underline orange;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px; }
+  main .cajaBlog .divCalltoaction .calltoaction {
+    text-decoration-color: orange;
+    font-size: medium;
+    text-decoration: underline orange;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px; }
+  main .cajaBlog .cajaImagenBlog .fotoPosteos {
+    height: 300px; }
   main .cajaCurso .reservarCurso .divCalltoaction .calltoactionSmall {
-    font-size: medium; }
+    text-decoration-color: orange;
+    font-size: medium;
+    text-decoration: underline orange;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px; }
   main .cajaCurso .carousel {
     width: 200px;
     margin: 2px  auto;
     padding: 0px; }
   main .cajaContacto .container .letraPisaBootstrap .calltoaction {
-    font-size: small; }
-  main .cajaProximosCursos .proximoCurso img {
+    font-size: small;
+    text-decoration-color: orange;
+    text-decoration: underline orange;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px; }
+  main .sectionProximosCursos .cajaProximosCursos .proximoCurso img {
     width: 250px; }
+  main .sectionProximosCursos .cajaProximosCursos .proximoCurso .divCalltoaction .calltoaction {
+    text-decoration-color: orange;
+    font-size: medium;
+    text-decoration: underline orange;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px; }
   main .sectionNuevoPost {
     display: flex;
     flex-direction: column;
@@ -822,4 +887,12 @@ main .cajaContacto .container .letraPisaBootstrap {
       main .sectionNuevoPost .cajaImagenPosteo .fotoPosteos {
         height: 300px; }
     main .sectionNuevoPost .cajaTextoPosteo {
-      margin-top: 0px; } }
+      margin-top: 0px; }
+    main .sectionNuevoPost .divCalltoaction .calltoaction {
+      text-decoration-color: orange;
+      font-size: medium;
+      text-decoration: underline orange;
+      padding-left: 50px;
+      padding-right: 50px;
+      padding-top: 10px;
+      padding-bottom: 10px; } }
