--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -63,28 +63,41 @@ main{
         background-color: $color-cajas;
     } 
     .cajaBlog{
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        grid-template-rows: 1fr 3fr 0.20fr;
-        grid-template-areas: 
-        "imagen titulo"
-        "texto texto"
-        "cta cta";
+        display: flex;
+        flex-direction: column;
         margin: 20px;
-        background-color: $color-cajas;
-        .cajaImagenBlog{
-            grid-area: imagen;
-            .fotoPosteos{
-                width: 100%;
-                border-radius: 8px;
-            }    
-        }
-        .cajaTituloYtextoBlog{
-            grid-area: titulo;
-         }
+        border:  $color-cajas 5px groove;
+        background-color: $color-cajas;        
+        margin-bottom: 40px; 
+        margin-top: 30px;
+        border-radius: 8px;
+        .divImagenYtituloBlog{
+            display: flex; 
+            .cajaImagenBlog{ 
+                width: 40%; 
+                padding: 10px;              
+                .fotoPosteos{
+                    width: 100%;
+                    height: 450px;
+                    border-radius: 8px;
+                }                
+            }
+            .cajaTituloYtextoBlog{                
+                width: 60%; 
+                padding: 10px;
+                h4{
+                    text-align: left;
+                    background-color: $color-cajas;
+                    border-radius: 8px;
+                }                              
+            }           
+        } 
         .cajaTextoBlog{
-            grid-area: texto;
-        }
+            h5{
+                text-align: left;
+                font-size: 1.8rem;
+            }
+        }      
         .divCalltoaction{
             grid-area: cta;
             display: flex;            
@@ -92,7 +105,7 @@ main{
             border-radius: 5px;
             align-items: flex-start;
             flex-direction: row;
-            text-decoration: none;
+            text-decoration: none;            
             .calltoaction{
                 @include boton ($color-boton)
             }         
