--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -169,7 +169,7 @@ main{
         flex-direction: column;
         margin: 20px;
         border-radius: 8px;  
-        border:  $color-cajas 5px groove;        
+        border:  $fondo-color-footer 5px solid;        
         color: #fecc01;
         background-color: $color-cajas;        
         .Subtitulo{            
@@ -188,7 +188,7 @@ main{
                 flex-direction: column;
                 align-items: center;
                 p{
-                    text-align: center;
+                    text-align: center;                    
                 }
             }
         }
@@ -203,10 +203,13 @@ main{
         "titulo titulo"
         "imagen texto"
         "imagen cta";
-        background-color: $fondo-nuevoPost; 
+        border:  $color-cajas 5px groove; 
+        background-color: $color-cajas;
+        justify-content: start;
         .Subtitulo{
-            grid-area: titulo;
-            height: 50px; 
+            grid-area: titulo;           
+            background-color: $fondo-nuevoPost;
+            display: flex;
             h4{
                 text-align: start;    
                 color: black;
@@ -215,6 +218,7 @@ main{
         .cajaImagenPosteo{
             grid-area: imagen;
             padding: 10px;
+            display: flex;            
             .fotoPosteos{
                 border-radius: 8px;                   
                 width: 99%;
@@ -224,6 +228,8 @@ main{
         .cajaTextoPosteo{
             grid-area: texto;
             color: black; 
+            display: flex;
+            flex-direction: column;
             h5{
                 color: black; 
                 text-align: center; 
