--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -7,8 +7,8 @@ $color-boton: orange;
     background-color: $color-boton;
     text-decoration: underline $color-boton;
     border-radius: 30px;
-    padding: 20px;
-    margin-bottom: 10px;
+    padding: 16px;   
+    margin-bottom: 10px;    
     &:hover{
         transform: scale(1.1, 1.1);
         text-decoration-color: $color-boton;
@@ -25,7 +25,7 @@ body{
         font-family: "SofiaSans-Regular";
         color: rgb(9, 3, 3);
         text-align: center;
-        padding: 20px;         
+        padding: 15px;         
     }
     p{
         font-size: 1.5rem;
@@ -121,12 +121,12 @@ footer{
         .sectionNuevoPost{       
             display: grid;
             grid-template-columns: 1fr;
-            grid-template-rows: 1fr 4fr 3fr 1fr;
+            grid-template-rows: 0.2fr 0.5fr 0.5fr 0.2fr;
             grid-template-areas: 
             "titulo"
             "imagen"
             "texto"
-            "cta";             
+            "cta";                                  
             .Subtitulo{
                 grid-area: titulo;
                 height: 100px;                
@@ -166,40 +166,39 @@ footer{
             }
         }
         .cajaBlog{                
-                grid-template-columns: 1fr;
-                grid-template-rows: 1fr 1fr 3fr 0.20fr;
-                grid-template-areas: 
-                "imagen"
-                "titulo"
-                "texto"
-                "cta";                
-                .cajaImagenBlog{
-                    grid-area: imagen; 
-                    display: flex;                                                      
-                    .fotoPosteos{                        
-                        margin: auto;                        
-                        height: 400px; 
-                        display: inline-block;                       
-                    }    
-                }
-                .cajaTituloYtextoBlog{
-                    grid-area: titulo;
-                 }
-                .cajaTextoBlog{
-                    grid-area: texto;                                        
-                }
-                .divCalltoaction{
-                    grid-area: cta;                    
-                }     
-        }        
-        .container{
-            .mapa{                
-                margin: auto;
-                padding: 50px;
-            }            
-        }        
+                .divImagenYtituloBlog{
+                    flex-direction: column;
+                    .cajaImagenBlog{
+                        width: 100%;                         
+                        .fotoPosteos{
+                            margin: auto;                        
+                            width: 100%;   
+                        }
+                    } 
+                    .cajaTituloYtextoBlog{
+                        display: flex;
+                        flex-direction: column;
+                        width: 100%; 
+                    }                   
+                }                    
+        }                   
+        .cajaContacto{
+            .container{
+                .mapa{              
+                    display: flex;
+                    flex-direction: column;                   
+                    margin: 0px auto;
+                    justify-content: center;
+                    overflow: hidden;
+                }            
+            }        
+        }
+       
     }
-}           
+}                                
+                    
+             
+        
 @media screen and (max-width: 480px){
     header{
         .fotoPortada{
@@ -215,7 +214,11 @@ footer{
                     .calltoaction{        
                         text-decoration-color: $color-boton;
                         font-size: medium; 
-                        text-decoration: underline $color-boton;     
+                        text-decoration: underline $color-boton;
+                        padding-left: 50px;
+                        padding-right: 50px; 
+                        padding-top: 10px;
+                        padding-bottom: 10px;    
                     } 
                 }
             }
@@ -277,23 +280,62 @@ footer{
             }
         }
     }
-     main{
-        .cajaBlog{
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;              
-            .cajaImagenBlog{                
-                .fotoPosteos{                        
-                    margin: 5px auto;                                  
-                    width: 100%;                                    
-                }    
+    main{
+        .cajaIntroduccion{
+            .divCalltoaction{
+                .calltoaction{
+                    text-decoration-color: $color-boton;
+                    font-size: medium; 
+                    text-decoration: underline $color-boton;
+                    padding-left: 50px;
+                    padding-right: 50px; 
+                    padding-top: 10px;
+                    padding-bottom: 10px; 
+                }
             }
+        }
+        .mainAbout{
+            .divCalltoaction{
+                .calltoaction{
+                    text-decoration-color: $color-boton;
+                    font-size: medium; 
+                    text-decoration: underline $color-boton;
+                    padding-left: 50px;
+                    padding-right: 50px; 
+                    padding-top: 10px;
+                    padding-bottom: 10px; 
+                }
+            }
+        }
+        .cajaBlog{
+            .divCalltoaction{
+                .calltoaction{
+                    text-decoration-color: $color-boton;
+                    font-size: medium; 
+                    text-decoration: underline $color-boton;
+                    padding-left: 50px;
+                    padding-right: 50px; 
+                    padding-top: 10px;
+                    padding-bottom: 10px; 
+                }
+            }                         
+            .cajaImagenBlog{                                                          
+                .fotoPosteos{                        
+                    height: 300px;                                                  
+                }    
+            }            
         }
         .cajaCurso{
             .reservarCurso{
                 .divCalltoaction{
-                    .calltoactionSmall{
-                        font-size: medium;
+                    .calltoactionSmall{                       
+                        text-decoration-color: $color-boton;
+                        font-size: medium; 
+                        text-decoration: underline $color-boton;
+                        padding-left: 50px;
+                        padding-right: 50px; 
+                        padding-top: 10px;
+                        padding-bottom: 10px; 
                     }
                 }
             }
@@ -308,17 +350,37 @@ footer{
                 .letraPisaBootstrap{
                     .calltoaction{
                         font-size: small;
+                        text-decoration-color: $color-boton;                    
+                        text-decoration: underline $color-boton;
+                        padding-left: 50px;
+                        padding-right: 50px; 
+                        padding-top: 10px;
+                        padding-bottom: 10px; 
                     }
                 }
             }
         } 
-        .cajaProximosCursos{
-            .proximoCurso{
-                img{
-                    width: 250px;
+        .sectionProximosCursos{
+            .cajaProximosCursos{
+                .proximoCurso{
+                    img{
+                        width: 250px;
+                    }
+                    .divCalltoaction{
+                        .calltoaction{                       
+                            text-decoration-color: $color-boton;
+                            font-size: medium; 
+                            text-decoration: underline $color-boton;
+                            padding-left: 40px;
+                            padding-right: 40px; 
+                            padding-top: 10px;
+                            padding-bottom: 10px; 
+                        }
+                    }
                 }
-            }
-        } 
+            } 
+        }
+        
         .sectionNuevoPost{
             display: flex;
             flex-direction: column;
@@ -338,7 +400,18 @@ footer{
             .cajaTextoPosteo{               
                 margin-top: 0px;
             }
-        }
+            .divCalltoaction{
+                .calltoaction{                       
+                    text-decoration-color: $color-boton;
+                    font-size: medium; 
+                    text-decoration: underline $color-boton;
+                    padding-left: 50px;
+                    padding-right: 50px; 
+                    padding-top: 10px;
+                    padding-bottom: 10px; 
+                }
+            }
+        }        
     }                                     
 }                    
                       
