--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -188,7 +188,8 @@ main{
                 flex-direction: column;
                 align-items: center;
                 p{
-                    text-align: center;                    
+                    text-align: center;                  
+                                    
                 }
             }
         }
@@ -197,8 +198,8 @@ main{
         margin: 20px;     
         border-radius: 8px;
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 5fr 1fr;
+        grid-template-columns: 0.5fr 1fr;
+        grid-template-rows: 1fr 5fr 0.2fr;
         grid-template-areas: 
         "titulo titulo"
         "imagen texto"
@@ -210,9 +211,10 @@ main{
             grid-area: titulo;           
             background-color: $fondo-nuevoPost;
             display: flex;
+            height: 70px; 
             h4{
                 text-align: start;    
-                color: black;
+                color: black;                              
             }  
         }
         .cajaImagenPosteo{
@@ -222,7 +224,7 @@ main{
             .fotoPosteos{
                 border-radius: 8px;                   
                 width: 99%;
-                height: 99%;                           
+                height: 99%;                                          
             }          
         }
         .cajaTextoPosteo{
@@ -236,6 +238,7 @@ main{
                 padding: 8px; 
                 font-size: 1.3rem; 
                 font-weight: bolder;
+                margin-top: 5px;
             }           
         } 
         .divCalltoaction{
