--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -106,7 +106,7 @@ footer{
         .fotoPortada{
             background-image: url(../img/entrenamientoKettlebells2.JPG);
             height: 450px;
-            background-attachment: fixed;
+            background-attachment: local;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -195,12 +195,12 @@ footer{
         }
        
     }
-}                                
-                    
-             
+}                               
+                   
+            
         
 @media screen and (max-width: 480px){
-    header{
+    header{        
         .fotoPortada{
             height: 250px;            
             background-attachment: local;           
@@ -282,6 +282,11 @@ footer{
     }
     main{
         .cajaIntroduccion{
+            margin-left: 2px;
+            margin-right: 2px;   
+            margin: auto; 
+            margin-top: 20px;
+            margin-bottom: 20px;        
             .divCalltoaction{
                 .calltoaction{
                     text-decoration-color: $color-boton;
@@ -295,6 +300,8 @@ footer{
             }
         }
         .mainAbout{
+            margin-left: 1px;
+            margin-right: 1px;
             .divCalltoaction{
                 .calltoaction{
                     text-decoration-color: $color-boton;
@@ -308,6 +315,8 @@ footer{
             }
         }
         .cajaBlog{
+            margin-left: 1px;
+            margin-right: 1px;
             .divCalltoaction{
                 .calltoaction{
                     text-decoration-color: $color-boton;
@@ -361,10 +370,17 @@ footer{
             }
         } 
         .sectionProximosCursos{
+            margin-left: 2px;
+            margin-right: 2px;   
+            margin: auto; 
+            margin-top: 20px;
+            margin-bottom: 20px; 
             .cajaProximosCursos{
                 .proximoCurso{
+                    width: 100%;
+                    border: $color-cajas 5px solid;
                     img{
-                        width: 250px;
+                        width: 100%;
                     }
                     .divCalltoaction{
                         .calltoaction{                       
@@ -380,27 +396,45 @@ footer{
                 }
             } 
         }
-        
+        .sectionReviews{
+            margin-left: 2px;
+            margin-right: 2px;   
+            margin: auto; 
+            margin-top: 20px;
+            margin-bottom: 20px;             
+            .review{
+                border: #fecb01b6 5px solid;
+            }
+        }
         .sectionNuevoPost{
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
+            margin-left: 2px;
+            margin-right: 2px;   
+            margin: auto; 
+            margin-top: 20px;
+            margin-bottom: 20px; 
+            border:  #fecb0123 5px solid;
             .Subtitulo{
-                height: 100px;               
+                height: 70px;               
                 margin-bottom: 0px;
             }
             .cajaImagenPosteo{
                 height: 350px;                
                 margin-top: 0px;
                 margin-bottom: 0px;
+                background-color:  #fecb0123;
                 .fotoPosteos{
-                    height: 300px;                
+                    height: 320px;                
                 }
             }
             .cajaTextoPosteo{               
                 margin-top: 0px;
+                background-color:  #fecb0123;
             }
             .divCalltoaction{
+                background-color:  #fecb0123;
                 .calltoaction{                       
                     text-decoration-color: $color-boton;
                     font-size: medium; 
