--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -113,6 +113,26 @@ footer{
             padding: 0px;
             margin: 0px;                 
         } 
+        .fotoPortadaAbout{
+            background-attachment: local;
+            height: 250px;
+        }
+        .fotoPortadaScorpion{
+            height: 250px;            
+            background-attachment: local;
+        }
+        .fotoPortadaBlog{            
+            height: 250px;            
+            background-attachment: local; 
+        }
+        .fotoPortadaKettlebells{
+            height: 250px;            
+            background-attachment: local; 
+        }
+        .fotoPortadaNutricion{
+            height: 250px;            
+            background-attachment: local;
+        }
         .hamburguesa{
             margin: 40px;        
         }                     
